--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function sendWhatsAppAndInvoice() {
   };
 
   const orderId = new Date().toISOString().replace(/[-:.TZ]/g, '').slice(0, 14);
-  const msg = `🟢✅Prepaid Order on WhatsApp*%0AOrder ID: ${orderId}%0AName: ${d.name}%0AMobile: ${d.mobile}%0AAlt Mobile: ${d.altMobile}%0AEmail: ${d.email}%0AAddress: ${d.address}%0ALandmark: ${d.landmark}%0APincode: ${d.pincode}%0AState: ${d.state}%0ADistrict/City: ${d.district}%0APost office : ${d.post}%0A%0AProduct: ${d.product}%0AVariant: ${d.variant}%0ABase Price: ₹${d.basePrice}%0AAmount paid: ₹${d.paid}`;
+  const msg = `🟢Prepaid Order on WhatsApp*%0AOrder ID: ${orderId}%0AName: ${d.name}%0AMobile: ${d.mobile}%0AAlt Mobile: ${d.altMobile}%0AEmail: ${d.email}%0AAddress: ${d.address}%0ALandmark: ${d.landmark}%0APincode: ${d.pincode}%0AState: ${d.state}%0ADistrict/City: ${d.district}%0APost office : ${d.post}%0A%0AProduct: ${d.product}%0AVariant: ${d.variant}%0ABase Price: ₹${d.basePrice}%0AAmount paid: ₹${d.paid}`;
   window.open(`https://wa.me/919983624797?text=${encodeURIComponent(msg)}`, '_blank');
 
   generatePDFInvoice(d, orderId);
